# chip_llm

./: .gitignore  c_to_summary.py  checker.py  codeBERTScore.py  config.yaml  cpp_to_text.py  data_input.json  data_input_clear_IOR.json  data_input_easy.json  data_input_exp_1.json  data_input_new.json  data_input_synth.json  data_input_test.json  evaluate.py  list.csv  list2.csv  main.py  new_list.csv  records.json  results.json  run.sh  run_20.sh  run_20_check.sh  run_geek.sh  run_qwen7b.sh  run_rewriter_gpt_oss_20b.sh  run_rewriter_gpt_oss_20b_baseline.sh  run_simple_7b.sh  run_sr_14b.sh  run_sysc.sh  run_test.sh  summary.csv  summary_to_systemc.py  test.ipynb  text_to_systemc.py
.backup/: data_input.json
agents/: Dut.cpp  agent_dut.py  agent_func.py  agent_pipe.py  agent_synth.py  agent_tb.py  agent_verify.py  dut_agent.py  func.json  func_agent copy.py  func_agent.py  main.py  main_batch.py  main_dut.py  main_mix.py  main_pre.py  main_tb.py  pipe_agent.py  prompts.py  tb_agent.py  utils.py
data_geek/: FindCommonArrayElements.cpp
data_inputs/: 2D_Convolution.cpp  AddTwoBinaryStrings.cpp  BinarytoDecimalConversion.cpp  FFT.cpp  FibonacciNumber.cpp  Gaussian_Blur.cpp  Median_Filter.cpp  NumberofUniqueTripletsWhoseXORisZero.cpp  SVM.cpp  SearchanElementinanArray_BinarySearch.cpp  Sobel_Edge_Detection.cpp  Softmax.cpp
data_output/7b_sv2/log_classified/.ignore/Softmax/: CMakeLists.txt  Dut.cpp
systemc_generation/dataset/testbench_new_beta/AreaAndPerimeterofRectangle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test-dut
(+8830 files in other folders)
